--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Feedback" />>   
+    <meta name="description" content="Feedback" />
     <title>Feedback</title>
   </head>
   <body>
-    <div id="root"></div>    
+    <div id="root"></div>
   </body>
 </html>
